Increase surefire memory.